--- a/Proyecto/styles.css
+++ b/Proyecto/styles.css
@@ -41,18 +41,45 @@ body {
 }
 .item-3 {
  background: var(--DarkBlue);
+ border-top-left-radius: 20px;
  grid-column: 5 / 8;
  grid-row: 6 / 11;
 }
 .item-4 {
  border: 4px solid var(--navyblue);
- border-radius: 10px;
+ border-radius: 100px;
  grid-column: 6 / 9;
  grid-row: 5 / 8;
  opacity: 50%;
 }
 .item-5 {
  border: 4px solid var(--StarBlue);
+ border-radius: 20px;
  grid-column: 7 / 10;
  grid-row: 3 / 9;
 }
+.item-6{
+ font-size: 40px;
+ grid-column: 6 / 9;
+ grid-row: 3 / 5;
+ display: grid;
+ justify-items: center;
+}
+.item-6 p {
+ margin: 0;
+}
+.item-7 {
+ background: var(--CeruleanCrayola);
+ grid-column: 3 / 4;
+ grid-row: 3 / 4;
+}
+.item-8 {
+ font-size: 20px;
+ display: grid;
+ grid-column-start: 4;
+ grid-row: 2 / 4;
+ transform: rotate(180deg);
+ writing-mode: vertical-lr;
+ place-items: center center;
+}
+
